# adapter/src/main/java/eu/cokeman/cycleareastats/in/rest/LandmarkApi.java
@@ -1,18 +1,12 @@
 package eu.cokeman.cycleareastats.in.rest;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import eu.cokeman.cycleareastats.entity.Landmark;
-import eu.cokeman.cycleareastats.mapper.LandmarkMapper;
+import eu.cokeman.cycleareastats.mapper.LandmarkExternalMapper;
 import eu.cokeman.cycleareastats.openapi.model.LandmarkDto;
 import eu.cokeman.cycleareastats.port.in.FetchLandmarkUseCase;
 import eu.cokeman.cycleareastats.port.in.ImportLandmarkUseCase;
 import eu.cokeman.cycleareastats.valueObject.LandmarkId;
-import eu.cokeman.cycleareastats.valueObject.LandmarkName;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.convert.converter.Converter;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Component;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -25,7 +19,7 @@ public class LandmarkApi implements eu.cokeman.cycleareastats.openapi.api.Landma
 
     private final ImportLandmarkUseCase importLandmarkUseCase;
     private final FetchLandmarkUseCase fetchLandmarkUseCase;
-    LandmarkMapper mapper = LandmarkMapper.INSTANCE;
+    LandmarkExternalMapper mapper = LandmarkExternalMapper.INSTANCE;
 
     public LandmarkApi(ImportLandmarkUseCase importLandmarkUseCase, FetchLandmarkUseCase fetchLandmarkUseCase) {
         this.importLandmarkUseCase = importLandmarkUseCase;
@@ -40,8 +34,9 @@ public class LandmarkApi implements eu.cokeman.cycleareastats.openapi.api.Landma
     }
 
     @Override
-    public ResponseEntity<LandmarkDto> loadLandmark(LandmarkId  landmarkId) {
-        Landmark landmark= fetchLandmarkUseCase.findLandmark(landmarkId);
+    public ResponseEntity<LandmarkDto> loadLandmark(String landmarkIdExternal) {
+        LandmarkId landmarkInternalId = mapper.mapToLandmarkid(UUID.fromString(landmarkIdExternal));
+        Landmark landmark= fetchLandmarkUseCase.findLandmark(landmarkInternalId);
         LandmarkDto landmarkResponse = mapper.mapToExternal(landmark);
         return ResponseEntity.ok(landmarkResponse);
     }
