# model/src/main/java/eu/cokeman/cycleareastats/valueObject/LandmarkMetadata.java
@@ -1,0 +1,6 @@
+package eu.cokeman.cycleareastats.valueObject;
+
+import java.util.HashMap;
+
+public record LandmarkMetadata(HashMap<String, String> metadata) {
+}
